# lib/api-spec/openapi.yaml
@@ -1205,6 +1205,14 @@ components:
         scheduledDate:
           type: string
           nullable: true
+        coatingType:
+          type: string
+          nullable: true
+        finishRequirements:
+          type: array
+          items:
+            type: string
+          nullable: true
         createdAt:
           type: string
         routing:
@@ -1264,6 +1272,14 @@ components:
           nullable: true
         scheduledDate:
           type: string
+          nullable: true
+        coatingType:
+          type: string
+          nullable: true
+        finishRequirements:
+          type: array
+          items:
+            type: string
           nullable: true
         materials:
           type: array
